Add slide url & qrcode

--- a/slides/index.html
+++ b/slides/index.html
@@ -65,11 +65,14 @@
                     <h1>Considering Android Development</h1>
                     <h3>A bit of basics then some</h3>
                     <p>
+                        <img src="img/qrcode.slides.png" style="float:right">
                         <small>
                                 <a href="http://thewheatfield.org">Timothy Lim</a> 
                                 / <a href="http://twitter.com/thewheat">@thewheat</a>
                                 <br>
-                                <a href="https://github.com/CornerGeeks/GDGBruneiDevFest2013/">https://github.com/CornerGeeks/GDGBruneiDevFest2013</a>
+                                Slides: <a href="http://cornergeeks.com/gdg/">http://cornergeeks.com/gdg/</a>
+                                <br>
+                                Code: <a href="https://github.com/CornerGeeks/GDGBruneiDevFest2013/">https://github.com/CornerGeeks/GDGBruneiDevFest2013</a>
                         </small>
                     </p>
                 </section>
@@ -748,6 +751,9 @@ phonegap run android</code></pre>
                                 / <a href="http://twitter.com/thewheat">@thewheat</a>
                                 <br>
                                 <a href="https://github.com/CornerGeeks/GDGBruneiDevFest2013/">https://github.com/CornerGeeks/GDGBruneiDevFest2013</a>
+                                <br>
+                                <a href="http://cornergeeks.com/gdg/">http://cornergeeks.com/gdg/</a>
+
                         </small>
 <br><br>
                     <small>Presentation done by <a href="http://lab.hakim.se/reveal-js/">reveal.js</a> by <a href="http://hakim.se">Hakim El Hattab</a></small>
